<resources>
    <string name="app_name">StudyApp</string>

    <string name="content_description">Decoration</string>

    <string name="test">Hello</string>
    <string name="EmptyPlaceholder"> </string>

    <string name="closeLabel">Close Menu</string>
    <string name="homeLabel">Home</string>
    <string name="studyLabel">Study</string>
    <string name="chatLabel">Chat</string>

    <string name="signIn">Sign In</string>

    <string name="emailHeader">Email or Student ID</string>
    <string name="contin">Continue</string>
    <string name="forgotPw"><u>Forgot Password?</u></string>
    <string name="password">Password</string>
    <string name="emailLabel">Enter your Email or Student ID</string>
    <string name="passwordLabel">Enter your password</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="signUpWithGoogle">Sign up with Google</string>
    <string name="registerP1">Don\'t have an Account?</string>
    <string name="registerP2"><u> Sign Up</u></string>
    <string name="loginP1">Already have an Account?</string>
    <string name="loginP2"><u> Sign In</u></string>
    <string name="signUp">Sign Up</string>
    <string name="or">Or</string>
    <string name="forgotPWLabel">Forgot Password?</string>
    <string name="forgotPWInstructions">Enter your email address or Student ID and we\'ll send you a link to reset your password.</string>
    <string name="returnLoginLabel">Click here to return to login page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="studentID">Enter your Student ID</string>
</resources>