<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/close_nav"
            android:icon="@drawable/ic_back_arrow"
            android:title="@string/closeLabel" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/homeLabel" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_study"
            android:title="@string/studyLabel" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chatLabel" />
    </group>
</menu>